// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseList collapsed with multiple courses and pages snapshot 1`] = `
<div
  className="course-list-container"
>
  <div
    className="course-list-heading-container"
  >
    <h2
      className="course-list-title"
    >
      My Courses
    </h2>
    <div
      className="course-filter-controls-container"
    >
      <CourseFilterControls />
    </div>
  </div>
  <div
    id="course-list-active-filters-container"
  >
    <ActiveCourseFilters />
  </div>
  <div
    className="d-flex flex-column flex-grow-1"
  >
    <CourseCard
      cardId="foo"
      key="foo"
    />
    <CourseCard
      cardId="bar"
      key="bar"
    />
    <CourseCard
      cardId="baz"
      key="baz"
    />
    <Pagination
      className="mx-auto mb-2"
      onPageSelect={[MockFunction setPageNumber]}
      pageCount={3}
      paginationLabel="Course List"
      variant="reduced"
    />
  </div>
</div>
`;

exports[`CourseList no courses snapshot 1`] = `
<div
  className="course-list-container"
>
  <div
    className="course-list-heading-container"
  >
    <h2
      className="course-list-title"
    >
      My Courses
    </h2>
    <div
      className="course-filter-controls-container"
    >
      <CourseFilterControls />
    </div>
  </div>
  <div
    className="d-flex flex-column flex-grow-1"
  />
</div>
`;

exports[`CourseList no filters snapshot 1`] = `
<div
  className="course-list-container"
>
  <div
    className="course-list-heading-container"
  >
    <h2
      className="course-list-title"
    >
      My Courses
    </h2>
    <div
      className="course-filter-controls-container"
    >
      <CourseFilterControls />
    </div>
  </div>
  <div
    className="d-flex flex-column flex-grow-1"
  />
</div>
`;

exports[`CourseList with filters snapshot 1`] = `
<div
  className="course-list-container"
>
  <div
    className="course-list-heading-container"
  >
    <h2
      className="course-list-title"
    >
      My Courses
    </h2>
    <div
      className="course-filter-controls-container"
    >
      <CourseFilterControls
        abitary="filter"
      />
    </div>
  </div>
  <div
    id="course-list-active-filters-container"
  >
    <ActiveCourseFilters
      abitary="filter"
    />
  </div>
  <div
    className="d-flex flex-column flex-grow-1"
  />
</div>
`;

exports[`CourseList with multiple courses and pages snapshot 1`] = `
<div
  className="course-list-container"
>
  <div
    className="course-list-heading-container"
  >
    <h2
      className="course-list-title"
    >
      My Courses
    </h2>
    <div
      className="course-filter-controls-container"
    >
      <CourseFilterControls />
    </div>
  </div>
  <div
    className="d-flex flex-column flex-grow-1"
  >
    <CourseCard
      cardId="foo"
      key="foo"
    />
    <CourseCard
      cardId="bar"
      key="bar"
    />
    <CourseCard
      cardId="baz"
      key="baz"
    />
    <Pagination
      className="mx-auto mb-2"
      onPageSelect={[MockFunction setPageNumber]}
      pageCount={3}
      paginationLabel="Course List"
      variant="secondary"
    />
  </div>
</div>
`;
